# SigNoise-generator

./: README.MD  main.py  pyproject.toml
designed_ui/: designed_interface.py  designed_interface.ui
lab1/: app.py  lab1.py
lab1/designed_ui/: designed_interface.py  designed_interface.ui
lab1/source/: app.py  designed_interface.py  plot.py  utils.py
reports/: 21_VMz_Khaleev_MISOS_lab1.docx
source/: app.py
task1/: task1.py
