[tool.poetry]
name = "misos"
version = "0.1.0"
description = ""
authors = ["Aleksey Khaleev <aleksey52nn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <3.13"
pillow = "^10.2.0"
numpy = "^1.26.3"
matplotlib = "^3.8.2"
pandas = "^2.1.4"
pyside6 = "^6.6.1"
scipy = "^1.11.4"


[tool.poetry.group.dev.dependencies]
setuptools = "^69.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
